--- a/LaboratoryExercise4/CMakeLists.txt
+++ b/LaboratoryExercise4/CMakeLists.txt
@@ -5,3 +5,24 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 set(SOURCE_FILES main.cpp)
 add_executable(LaboratoryExercise4 ${SOURCE_FILES})
+
+# FIND GLUT
+find_package(GLUT REQUIRED)
+include_directories(${GLUT_INCLUDE_DIRS})
+link_directories(${GLUT_LIBRARY_DIRS})
+add_definitions(${GLUT_DEFINITIONS})
+if(NOT GLUT_FOUND)
+    message(ERROR " GLUT not found!")
+endif(NOT GLUT_FOUND)
+
+
+# FIND OPENGL
+find_package(OpenGL REQUIRED)
+include_directories(${OpenGL_INCLUDE_DIRS})
+link_directories(${OpenGL_LIBRARY_DIRS})
+add_definitions(${OpenGL_DEFINITIONS})
+if(NOT OPENGL_FOUND)
+    message(ERROR " OPENGL not found!")
+endif(NOT OPENGL_FOUND)
+
+target_link_libraries(LaboratoryExercise4 ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} )
